@@ -3,6 +3,7 @@ Unreleased
 Added
     Cron job to disable backup schedules for offline hosts & deleted instances
     Limit not-admin users to servers/projects
+    View to view & delete hosts in settings
 
 Changed
     Support backups & backup schedules in different projects
